add rider detail input and delete functionality

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -14,13 +14,13 @@
     
     
     <% if (user) { %>
-      <a href="/flights/index" class=<%= title === 'All Flights' ? 'active' : ''  %>
+      <a href="/rides" class=<%= title === 'My Rides' ? 'active' : ''  %>
         >
         ALL RIDES
       </a>
       
       
-      <a href="/horses" class=<%= title === 'Add Meal' ? 'active' : ''  %>
+      <a href="/horses" class=<%= title === 'Manage Horses' ? 'active' : ''  %>
         >
         MANAGE HORSES
       </a>
