--- a/views/rides/index.ejs
+++ b/views/rides/index.ejs
@@ -19,7 +19,7 @@
         <tr>
           <td><%= ride.numberOfRiders %></td>
           <td><%= ride.date %></a></td>
-          <td><a href="/rides/<%= ride._id %>"><button>details</i></button></a></td>
+          <td><a href="/rides/<%= ride._id %>"><button>details</button></a></td>
           <td>
             <form 
             action="/rides/<%= ride._id %>?_method=DELETE" 
