--- a/views/rides/new.ejs
+++ b/views/rides/new.ejs
@@ -1,4 +1,5 @@
 <%- include("../partials/html-head") %>
+<link rel="stylesheet" href="/stylesheets/rides/forms.css">
 <%- include("../partials/nav") %>
 
 <main>
