--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,8 @@
 <%- include('./partials/nav') %>
 
 <main>
-  <h1>hello, <%= user ? user.profile.name : "friend" %></h1>
+  <h1>hello, <%= user ? user.profile.name : "there stranger..." %></h1>
+  
   <% if (user?.profile.avatar) { %>
     <div>
       <img
@@ -10,6 +11,8 @@
         alt="<%= user.profile.name %> avatar"
       />
     </div>
+  <% } else { %>
+    Log in with Google to request a ride or view and edit details of previously requests
   <% } %>
 </main>
 
