--- a/views/rides/myRides.ejs
+++ b/views/rides/myRides.ejs
@@ -15,7 +15,7 @@
 
     <label>
       Date:
-    <input type="date" name="date" id="" >
+    <input type="dateti" name="date" id="" >
     <!-- <input type="datetime-local" name="departs" id="departure-time-input" value="2023-04-16T13:42:35.520Z"> -->
     </label>
 
