--- a/public/stylesheets/rides/forms.css
+++ b/public/stylesheets/rides/forms.css
@@ -5,12 +5,13 @@ form {
   font-size: 20px;
 }
 
-#new-meal {
+#new-ride {
   display: flex;
-  flex-direction: column;
+  
   align-items: center;
   justify-items: center;
 }
+
 
 
 table {
@@ -30,11 +31,9 @@ form * {
 
 form > button {
   grid-column: span 2;
-  width: 160px;
+  width: 100px;
   margin-left: auto;
-  font-size: 22px;
+  font-size: 16px;
 }
 
-#add-meal {
-  margin: 0;
-}
+
