implement horse model and horse admin view

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -26,9 +26,9 @@
       </a>
       
       
-      <a href="/admin/horses" class=<%= title === 'Manage Horses' ? 'active' : ''  %>
+      <a href="/admin/" class=<%= title === 'Site Administration' ? 'active' : ''  %>
         >
-        MANAGE HORSES
+        ADMIN 
       </a>
 
 
