implement filter on my rides view

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -15,9 +15,9 @@
         REQUEST A RIDE
       </a>
 
-      <a href="/my-rides" class=<%= title === 'My Rides' ? 'active' : ''  %>
+      <a href="/rides/my-rides" class=<%= title === 'My Rides' ? 'active' : ''  %>
         >
-        ALL RIDES
+        MY RIDES
       </a>
 
       <a href="/rides" class=<%= title === 'All Rides' ? 'active' : ''  %>
