implement horses index view

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -6,8 +6,11 @@
   <h1>Site Administration</h1>
 
 
-  <a href="/admin/horses">Horses</a>
+  <a href="/horses">Horses</a>
 
+  <a href="/admin/users">Users</a>
+
+  <a href="/admin/schedule">Schedule</a>
 
 </main>
 
