--- a/views/rides/index.ejs
+++ b/views/rides/index.ejs
@@ -1,9 +1,10 @@
 <%- include("../partials/html-head") %>
+<link rel="stylesheet" href="/stylesheets/rides/show.css">
 <%- include("../partials/nav") %>
 
 
 <main>
-  <h1>My Rides</h1>
+  <h1>Upcoming Rides</h1>
   <table>
     <thead>
       <tr>
