--- a/views/rides/my-rides.ejs
+++ b/views/rides/my-rides.ejs
@@ -9,6 +9,35 @@
 
   <!-- ride.requestor.name %> -->
   
+
+  <table>
+    <thead>
+      <tr>
+        <th>Number of Riders</th>
+        <th>Date</th>
+        <th>Details</th>
+        <th>Delete</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% rides.forEach(ride => { %>
+        <tr>
+          <td><%= ride.numberOfRiders %></td>
+          <td><%= ride.date %></a></td>
+          <td><a href="/rides/<%= ride._id %>"><button>details</button></a></td>
+          <td>
+            <form 
+            action="/rides/<%= ride._id %>?_method=DELETE" 
+            method="POST"
+            >
+            <button type="submit">X</button>
+          </form>
+        </td>
+      </tr>      
+      <% }) %>
+    </tbody>
+  </table>  
 </main>
 
 <%- include("../partials/footer") %>
