implement user admin view

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -12,6 +12,17 @@
 
   <a href="/admin/schedule">Schedule</a>
 
+
+<% if(user) { %>
+
+<h3>
+
+  <%= user.profile %>
+
+</h3>
+
+<% } %>
+
 </main>
 
 
