--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,11 +4,6 @@
 </head>
 <body>
   <nav>
-
-    
-    
-    
-    
     <% if (user) { %>
       <a href="/rides/new" class=<%= title === 'Request a Ride' ? 'active' : ''  %>
         >
@@ -19,19 +14,17 @@
         >
         MY RIDES
       </a>
-
+    <% if(user.profile.role === 'Admin' || user.profile.role === 'Staff') { %>
       <a href="/rides" class=<%= title === 'All Rides' ? 'active' : ''  %>
         >
         ALL RIDES
       </a>
-      
-      
       <a href="/admin/" class=<%= title === 'Site Administration' ? 'active' : ''  %>
         >
         ADMIN 
       </a>
-
-
+      <% } %>
+        
       <a href="/auth/logout" class="right">
         <button type="submit">Logout</button>
       </a>
