prepopulate ride form with available profile data

--- a/views/admin/edit-profile.ejs
+++ b/views/admin/edit-profile.ejs
@@ -13,13 +13,10 @@
     
     <label>
       Name:
-    <input type="text" name="name" id="profile-input" value="">
+    <input type="text" name="name" id="profile-input" value="<%= profile.name %>">
     </label>
     
-    <label>
-      E-mail:
-    <input type="text" name="email" id="profile-input" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" >
-  </label>
+ 
 
 
     <label>
