--- a/views/rides/new-2.ejs
+++ b/views/rides/new-2.ejs
@@ -5,7 +5,7 @@
 <main id="new-ride">
   <h1><%= title %></h1>
   
-  <form action="/admin/users/<%= user.profile._id %>?_method=PUT" 
+  <form action="/admin/users/<%= profile._id %>?_method=PUT" 
     id="new-ride" 
     method="POST">
     <label>
@@ -14,7 +14,7 @@
       </label>
     <label>
       E-mail:
-      <input type="text" name="email" id="ride-text-input" required="true" value="<%= user.profile.preferredEmail %>">
+      <input type="text" name="email" id="ride-text-input" required="true" value="<%= user.profile.email %>">
       </label>
     <label>
       Phone Number:
@@ -23,7 +23,24 @@
       
       <button type="submit">Save</button>
    </form>
+   <form action="">
+    
+    
+      <label>
+      Number of Riders:
+      <input type="number" name="numberOfRiders" id="rider-number-input" required="true" min="1" max="20">
+      </label>
 
+
+
+    <label>
+      Date:
+    <input type="date" name="date" id="" >
+    <!-- <input type="datetime-local" name="departs" id="departure-time-input" value="2023-04-16T13:42:35.520Z"> -->
+    </label>
+
+    <button type="submit">Submit</button>
+  </form>
 
 </main>
 
