--- a/views/rides/new-1.ejs
+++ b/views/rides/new-1.ejs
@@ -5,6 +5,8 @@
 <main id="new-ride">
   <h1><%= title %></h1>
   
+  <h3>Contact Details</h3>
+
   <form action="/admin/users/<%= user.profile._id %>?_method=PUT" 
     id="new-ride" 
     method="POST">
@@ -24,6 +26,7 @@
       <button type="submit">Save</button>
    </form>
 
+   <h3>Ride Details</h3>
 
 </main>
 
