add requestor name to my-rides view

--- a/views/rides/my-rides.ejs
+++ b/views/rides/my-rides.ejs
@@ -5,9 +5,9 @@
 
 <main>
   <h1><%= title %></h1>
-  <h2>Rides requested by </h2>
+  <h2>Rides requested by <%= requestor %>   </h2>
 
-  <!-- ride.requestor.name %> -->
+
   
 
   <table>
