add age and young rider input fields to ride request form

--- a/public/stylesheets/rides/forms.css
+++ b/public/stylesheets/rides/forms.css
@@ -36,5 +36,10 @@ form > button {
   font-size: 16px;
 }
 
+form > #radio {
+  display: flex;
+  flex-direction: column;
+}
+
 
 select:invalid { color: gray; }
