--- a/views/rides/show.ejs
+++ b/views/rides/show.ejs
@@ -5,25 +5,112 @@
 
 <main>
   <h1><%= title %></h1>
-  <h2>Rides requested by <%= ride.requestor.name %></h2>
 
-  <form action="/rides" id="new-form" method="POST">
-    <label>
-      Number of Riders:
-    <input type="number" name="numberOfRiders" id="rider-number-input" required="true" min="1" max="20">
+  <h3>Contact Information</h3>
+
+<form action="/rides/new" id="new-ride" >
+  <label>
+    Name of Requestor:
+    <input type="text" name="name" id="ride-text-input" required="true" value="<%= ride.requestor.name %>" disabled="true">
     </label>
-
-    <label>
-      Date:
-    <input type="date" name="date" id="" >
-    <!-- <input type="datetime-local" name="departs" id="departure-time-input" value="2023-04-16T13:42:35.520Z"> -->
+  <label>
+    Preferred E-mail:
+    <input type="text" name="email" id="ride-text-input" required="true" value="<%= ride.requestor.preferredEmail %>" disabled="true">
     </label>
+  <label>
+    Phone Number:
+    <input type="tel" name="phone" id="ride-text-input" required="true" value="<%= ride.requestor.phone %>" placeholder="###-###-####" disabled="true">
+  </label>
+  
+  <button type="submit">Edit</button>
+</form>
 
-    <button type="submit">Edit Request</button>
-  </form>
+<h3>Ride Details</h3>
 
+
+<form action="/rides" id="new-form" method="POST">
+  <label>
+    Date:
+    <input type="date" name="date" id="" value="<%= dt %>" disabled>
+  </label>
+  
+  <label>
+    Time:
+  <select name="time" id="" disabled>
+    <option value="morning" <%= ride.time === "morning" ? "selected" : "" %>>Morning (10am - 1pm)</option>
+    <option value="afternoon" <%= ride.time === "afternoon" ? "selected" : "" %>>Afternoon (1pm - Sunset)</option>
+    <option value="anytime" <%= ride.time === "anytime" ? "selected" : "" %>>Any Time of Day</option>
+    <option value="other" <%= ride.time === "other" ? "selected" : "" %>>Other (please specify)</option>
+  
+  </select>
+  </label>
+  <label>
+    What type of trail ride are you looking for?
+    <select name="type" id="" disabled>
+      <option value="scenic" <%= ride.type === "scenic" ? "selected" : "" %>>Scenic Trail Ride(Beginner-friendly)</option>
+      <option value="adventure" <%= ride.type === "adventure" ? "selected" : "" %>>Adventure Trail Ride (Novice and Intermediate)</option>
+      <option value="vineyard" <%= ride.type === "vineyard" ? "selected" : "" %>>Vineyard Trail Ride (on specific dates)</option>
+      <option value="moonlight" <%= ride.type === "moonlight" ? "selected" : "" %>>Moonlight Trail Ride (on specific dates)</option>
+      <option value="bachelorette" <%= ride.type === "bachelorette" ? "selected" : "" %>>Bachelor or Bachelorette Party</option>
+      <option value="equitrek" <%= ride.type === "equitrek" ? "selected" : "" %>>Equitreks and Overnights (Novice - Master Level Riders)</option> 
+    </select>
+  </label> <br>
+
+  <label>
+    Number of Riders:
+  <select name="numberOfRiders" id="rider-number-select" required="true" placeholder="Choose">
+    <option value="" disabled selected="true" >Choose</option>
+    <option value="1" <%= ride.numberOfRiders === 1 ? "selected" : "" %>>1 rider</option>
+    <option value="2" <%= ride.numberOfRiders === 2 ? "selected" : "" %>>2 riders</option>
+    <option value="3" <%= ride.numberOfRiders === 3 ? "selected" : "" %>>3 riders</option>
+    <option value="4" <%= ride.numberOfRiders === 4 ? "selected" : "" %>>4 riders</option>
+    <option value="5" <%= ride.numberOfRiders === 5 ? "selected" : "" %>>5 riders</option>
+    <option value="6" <%= ride.numberOfRiders === 6 ? "selected" : "" %>>6 riders</option>
+    <option value="7" <%= ride.numberOfRiders === 7 ? "selected" : "" %>>7 riders</option>
+    <option value="8" <%= ride.numberOfRiders === 8 ? "selected" : "" %>>8 riders</option>
+    <option value="9" <%= ride.numberOfRiders === 9 ? "selected" : "" %>>9 riders</option>
+    <option value="10" <%= ride.numberOfRiders === 10 ? "selected" : "" %>>10 riders</option>
+    <option value="11" <%= ride.numberOfRiders === 11 ? "selected" : "" %>>11 riders</option>
+    <option value="12" <%= ride.numberOfRiders === 12 ? "selected" : "" %>>12 riders</option>
+  </select>
+  </label><br>
+
+  <button type="submit">Submit</button>
+  
+</form>
+
+<div>
+  <p>Are ANY riders inder the age of 10?</p>
+  
+  <fieldset disabled>
+  <label>
+    <input type="radio" name="young" value="no" <%= ride.young === "no" ? "checked" : "" %>>
+    No. All riders are over the age of 10. 
+  </label><br>
+  
+  <label>
+    <input type="radio" name="young" value="separate trail" <%= ride.young === "no" ? "checked" : "" %>>
+    We have riders 8-9 and would like to book a Trail Experience Lesson for them while the adults go out on a 1 hour trail ride.
+  </label><br>
+  
+  <label>
+    <input type="radio" name="young" value="kids only" <%= ride.young === "no" ? "checked" : "" %>>
+    We have riders ages 8-9 and would like to book a Trail Experience Lesson for just them.
+  </label><br>
+  
+  <label>
+    <input type="radio" name="young" value="together" <%= ride.young === "no" ? "checked" : "" %>>
+    We have riders ages 8-9 and would like to book a Trail Experience Lesson for our entire party.
+  </label><br>
+  
+  <label>
+    <input type="radio" name="young" value="separate lesson" <%= ride.young === "no" ? "checked" : "" %>>
+    Yes. We have a rider who is under the age of 8 who would like to take a Horse Experience Lesson while the rest of our party goes on trail. (NOTE: An adult must stay back with the youth under the age of 8)
+  </label><br>
+</fieldset>
+</div>
+   
 <h2>Rider Details</h2>
-
 
 <form 
     id=""
@@ -33,6 +120,10 @@
     <label>
       Name:
     <input type="text" name="name" class="rider-text" required>
+    </label>
+    <label>
+      Age:
+    <input type="number" name="age" class="rider-text" required>
     </label>
 
     <label>
@@ -57,14 +148,15 @@
       </select>
     </label>
     
-    </form>
     <button type="submit">Add Rider</button>
+    </form>
     
-  </form>
+
 
 <table>
   <thead>
     <th>Name</th>
+    <th>Age</th>
     <th>Height</th>
     <th>Weight</th>
     <th>Riding Experience</th>
@@ -74,6 +166,7 @@
     <% ride.riders.forEach(rider => { %>
       <tr>
         <td><%= rider.name %></td>
+        <td><%= rider.age %></td>
         <td><%= rider.height %></td>
         <td><%= rider.weight %></td>
         <td><%= rider.experience %></td>
