--- a/views/rides/my-rides.ejs
+++ b/views/rides/my-rides.ejs
@@ -13,8 +13,10 @@
   <table>
     <thead>
       <tr>
-        <th>Number of Riders</th>
+        <th>Ride </th>
         <th>Date</th>
+        <th>Number of Riders</th>
+        <th>Request Status</th>
         <th>Details</th>
         <th>Delete</th>
         <th></th>
@@ -23,16 +25,18 @@
     <tbody>
       <% rides.forEach(ride => { %>
         <tr>
+          <td><%= ride.type %></td>
+          <td> <input type="date" value="<%= ride.date.toISOString().slice(0, 10) %>" disabled></td>
           <td><%= ride.numberOfRiders %></td>
-          <td> <input type="date" value="<%= ride.date.toISOString().slice(0, 10) %>" disabled>
-            </td>
+          <td><%= ride.status %></td>
           <td><a href="/rides/<%= ride._id %>"><button>details</button></a></td>
           <td>
             <form 
-            action="/rides/<%= ride._id %>?_method=DELETE" 
+            action="/rides/<%= ride._id %>/cancel?_method=PATCH" 
             method="POST"
             >
-            <button type="submit">X</button>
+
+            <button type="submit">cancel</button>
           </form>
         </td>
       </tr>      
