implement submit request functionality

--- a/views/rides/show.ejs
+++ b/views/rides/show.ejs
@@ -183,8 +183,13 @@
   </tbody>
 </table>
 
+<form 
+action="/rides/<%= ride._id %>/submit?_method=PATCH" 
+method="POST"
+>
 
-
+<button type="submit">Submit Request</button>
+</form>
 
 </main>
 
