--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -40,7 +40,7 @@ body > main h1:first-child {
   margin-bottom: 50px;
 }
 
-main > #new-ride {
+#meals {
   display: flex;
   align-items: center;
   justify-items: center;
@@ -100,6 +100,10 @@ nav > a.active {
   background-color: white;
   width: 500px;
   max-width: 80%;
+}
+
+.modal.active {
+
 }
 
 .modal-header {
