--- a/public/stylesheets/rides/forms.css
+++ b/public/stylesheets/rides/forms.css
@@ -5,13 +5,12 @@ form {
   font-size: 20px;
 }
 
-#new-ride {
+#new-meal {
   display: flex;
-  
+  flex-direction: column;
   align-items: center;
   justify-items: center;
 }
-
 
 
 table {
@@ -31,15 +30,11 @@ form * {
 
 form > button {
   grid-column: span 2;
-  width: 100px;
+  width: 160px;
   margin-left: auto;
-  font-size: 16px;
+  font-size: 22px;
 }
 
-form > #radio {
-  display: flex;
-  flex-direction: column;
+#add-meal {
+  margin: 0;
 }
-
-
-select:invalid { color: gray; }
