--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,41 +1,70 @@
 html {
-  box-sizing: border-box;
-}
-
-/* The Universal Selector */
-*, /* All elements*/
-*::before, /* All ::before pseudo-elements */
-*::after {
-  /* All ::after pseudo-elements */
-  /* height & width will now include border & padding by default but can be overridden as needed */
-  box-sizing: inherit;
+  box-sizing: border-box
 }
 
 body {
-  background-color: #1a1a1a;
-  color: #f6f6f6;
-  /* Use a system font, if none are available use any found sans-sarif font */
-  font-family: system-ui, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 
-    'Helvetica Neue', sans-serif;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
   margin: 0;
+  color: white;
+  min-height: 100vh;
+  font-size: 18px;
+  font-family: 'Poppins', sans-serif;
+  
+
 }
 
 nav {
-  background-color: #f6f6f6;
-  color: #1a1a1a;
+  height: 100px;
   display: flex;
-  align-items: center;
-  padding: 10px;
-  min-height: 60px;
-}
-
-main {
-  display: flex;
-  align-items: center;
+  font-weight: bold;
+  font-size: large;
+  align-content: center;
   justify-content: center;
-  flex-direction: column;
+  background-color: rgba(103, 108, 120, 1);
 }
 
-.right {
-  margin-left: auto;
+#login-video {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  
 }
+
+#login-video::before {
+  content: "";
+  
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 1500px;
+  background-color: rgba(0, 0, 0, .5);
+  z-index: 1;
+  
+}
+
+
+video {
+  position: absolute;
+  width: 100%;
+  z-index: 0;
+}
+
+#login {
+  display: flex;
+  margin-top: 300px;
+  justify-content: center;
+  padding: 50px;
+  width: 30%;
+  
+  background-color: rgba(163, 168, 198, 0.25);
+  color: white;
+  border-radius: 15px;
+  z-index: 2;
+}
+
+
