--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,6 +4,7 @@
 </head>
 <body>
   <nav>
+    <h1>Trail Rider</h1>
     <% if (user) { %>
       <a href="/rides/new" class=<%= title === 'Request a Ride' ? 'active' : ''  %>
         >
@@ -29,21 +30,6 @@
         <button type="submit">Logout</button>
       </a>
     <% } else { %>
-      <div 
-        id="g_id_onload"
-        data-client_id="<%= googleClientID %>"
-        data-login_uri="/auth/google"
-        data-auto_prompt="false"
-        data-prompt_parent_id="g_id_onload"
-      ></div>
-      <div 
-        class="g_id_signin right"
-        data-type="standard"
-        data-size="large"
-        data-theme="outline"
-        data-text="sign_in_with"
-        data-shape="rectangular"
-        data-logo_alignment="left"
-      ></div>
+     
     <% } %>
   </nav>
