--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,12 +2,21 @@ html {
   box-sizing: border-box
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+  Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+
 body {
   display: flex;
   flex-direction: column;
   background-color: white;
   margin: 0;
-  color: white;
+  color: #424748;
   min-height: 100vh;
   font-size: 18px;
   font-family: 'Poppins', sans-serif;
@@ -18,12 +27,55 @@ body {
 nav {
   height: 100px;
   display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  color: white;
   font-weight: bold;
   font-size: large;
-  align-content: center;
-  justify-content: center;
+  padding: 0 20px 0 30px;
   background-color: rgba(103, 108, 120, 1);
 }
+
+nav > a {
+  margin: 20px;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+  color: #424748;
+}
+
+nav > a:visited {
+  color: #424748;
+}
+
+nav > a:hover {
+  color: white;
+  background-color: #424748;
+}
+
+nav > a {
+  margin: 20px;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+  color: #424748;
+}
+
+nav > a.active {
+  color: white;
+}
+
+nav > div {
+  min-width: 300px;
+}
+
+nav > #center {
+  display: flex;
+  height: 100px;
+  justify-content: center;
+  align-items: center;
+}
+
 
 #login-video {
   display: flex;
@@ -65,6 +117,55 @@ video {
   color: white;
   border-radius: 15px;
   z-index: 2;
+}
+
+
+
+/* body > main {
+  grid-area: main;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #e8eceb;
+  padding: 20px;
+} */
+
+/* body > main h1:first-child {
+  margin-bottom: 50px;
+} */
+
+
+
+/* body > nav {
+  grid-area: nav;
+  background-color: #b8c0c2;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0 20px 0 30px;
+} */
+
+
+
+nav > div > a {
+  margin: 20px;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+  color: #424748;
+}
+
+nav > div > a:visited {
+  color: #424748;
+}
+
+nav > div > a:hover {
+  color: white;
+  background-color: #424748;
+}
+
+nav > div > a.active {
+  color: white;
 }
 
 
