--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/assets/horse-head.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Schibsted+Grotesk&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/stylesheets/main.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
 
     <title><%= title %></title>
 
