--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,9 @@
 </head>
 <body>
   <nav>
-    <h1>Trail Rider</h1>
+    <div class="nav" id="left"> "H"</div>
+    <div class="nav" id="center"><h1>Trail Rider</h1></div>
+    <div class="nav" id="right">
     <% if (user) { %>
       <a href="/rides/new" class=<%= title === 'Request a Ride' ? 'active' : ''  %>
         >
@@ -30,6 +32,6 @@
         <button type="submit">Logout</button>
       </a>
     <% } else { %>
-     
+    </div>
     <% } %>
   </nav>
